110-reorganizelayout: fix tests configuration